--- a/lib/index.pug
+++ b/lib/index.pug
@@ -1,26 +1,15 @@
 doctype html
-html(lang='en')
- head
-   title= title
-   link(href='https://fonts.googleapis.com/css?family=Nunito', rel='stylesheet')
-   style(type='text/css').
-    body {
-      font-family: 'Nunito', sans-serif;
-      color: rgba(0, 0, 0, 0.87);
-      background-color: #FAFAFA;
-    }
-    h1 {
-      font-size: 45px;
-      font-weight: 500;
-      text-align: center;
-    }
-    li {
-      list-style-type: none;
-      text-align: center;
-    }
- body
-   h1= title
-   ul
-    each dir in dirs
-      li
-        a(href='./' + dir)= dir
+html
+    head
+        title Documentation Links
+        link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css')
+    body
+        .container.mx-auto.p-4
+            .row
+                .col-md-12
+                    h1.text-4xl.font-bold.mb-4= title
+                    p.text-lg.text-gray-700.mb-4 Documentation Links
+                    .flex.flex-col.gap-4
+                        each dir in dirs
+                            .bg-gray-100.shadow-md.rounded-lg.p-4
+                                a.text-blue-500(href='./' + dir)= dir
