fix: add correct page title

--- a/lib/index.pug
+++ b/lib/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title Documentation Links
+        title= title
         link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css')
     body
         .container.mx-auto.p-4
