--- a/lib/index.pug
+++ b/lib/index.pug
@@ -8,8 +8,11 @@ html
             .row
                 .col-md-12
                     h1.text-4xl.font-bold.mb-4= title
-                    p.text-lg.text-gray-700.mb-4 Documentation Links
+                    p.text-lg.text-gray-700.mb-4
+                        | Documentation Links
+                        a.text-blue-500(href='./latest')= " (LATEST)"
                     .flex.flex-col.gap-4
-                        each dir in dirs
+                        each dir in filteredDirs
                             .bg-gray-100.shadow-md.rounded-lg.p-4
                                 a.text-blue-500(href='./' + dir)= dir
+
